# MylapsRC

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: client.h
client/resources/: client.qrc  main.qml
client/src/: client.cpp  main.cpp
client/tests/: CMakeLists.txt  mock_qtcpsocket.h  mock_tcpserver.h  test_client.cpp  test_client_with_server.cpp  testable_client.h
resources/config/: config.ini
server/: CMakeLists.txt
server/include/: driver.h  message_analyser.h  message_handler.h  race_analyser.h  server.h  server_manager.h  server_socket.h
server/src/: driver.cpp  main.cpp  message_analyser.cpp  message_handler.cpp  race_analyser.cpp  server.cpp  server_manager.cpp  server_socket.cpp
server/tests/: CMakeLists.txt  test_driver.cpp  test_message_handler.cpp  test_race_analyser.cpp  test_server.cpp  test_server_socket.cpp
